# design-deep-spirit-next-pass-2026-05-26

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  rust-toolchain.toml
schema/: signal-frame.schema  spirit.schema
src/: daemon.rs  executor.rs  lib.rs  sema.rs  signal.rs
tests/: end_to_end.rs  macro_expansion_visible.rs  schema_macro_emission.rs
