[package]
name         = "design-deep-spirit-next-pass"
version      = "0.3.0-next-pass.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/design-deep-spirit-next-pass-2026-05-26"
description  = "Designer-parallel deep spirit using the finished schema-next macro engine: signal-frame.schema imported and macro-expanded into the lowered asschema; emitter consumes that to produce the wire surface."
publish      = false

[lib]
name = "design_deep_spirit_next_pass"
path = "src/lib.rs"

[[bin]]
name = "spirit"
path = "src/bin/spirit.rs"

[[bin]]
name = "spirit-daemon"
path = "src/bin/spirit-daemon.rs"

[dependencies]
nota-next = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
redb = "2"

[build-dependencies]
schema-next = { git = "https://github.com/LiGoldragon/schema-next.git", branch = "designer-finish-macro-engine-2026-05-26" }
nota-next = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
